# DevOps-Course-Starter

./: .env.template  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  db_items.py  flask_config.py  item.py  pyproject.toml  requirements.txt  run.sh  session_items.py  test_client.py  test_items.py  test_system.py  trello_items.py  view_model.py
documentation/: component.drawio  container.drawio  context.drawio
templates/: add_new_board.html  add_new_card.html  add_new_item.html  add_new_list.html  index.html  layout.html  move_card.html  trello_board.html  update_item.html
