[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.1"
python-dotenv = "0.14.0"
requests = "2.24.0"
gunicorn = "20.0.4"
python-dateutil = "2.8.1"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-cov = "2.10.1"
selenium = "3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
